--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header></header>
     <main>
         <!-- introduction header with large image and text overlay -->
-        <section>
+        <section class="header">
             <div>
                 <h1>Hi! My name's Elina (they/them).</h1>
                 <h1>I'm a student at <a href="https://www.thinkful.com/">Thinkful</a>.</h1>
@@ -31,7 +31,7 @@
 
 
         <!-- simple about me section with 2 items -->
-        <section class="group">
+        <section class="group about">
             <div class="item">
                 <img src="https://media2.fdncms.com/orlando/imager/u/original/26975451/rollinscollege.jpg" alt="">
             </div>
